syntax = "proto3";

option csharp_namespace = "Librarian";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SayHello2 (HelloRequest2) returns (HelloReply2);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

message HelloRequest2 {
  string name = 1;
}


// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message HelloReply2 {
  string message = 1;
}
